--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descripion" content="Join our online courses to learn new skills and advance your career. Expert instructors and flexible learning at your fingertips.">
     <title>Contact page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
@@ -12,10 +13,10 @@
     <!----------------Header---------------->
     <header class="sub-header">
         <nav class="navb">
-            <a href="index.html"><h1>OneEdu</h1></a>
+            <a href="/"><h1>OneEdu</h1></a>
             <div class="nav-links">
                 <i class="fa-solid fa-xmark" id="close-btn"></i>
-                <a href="index.html">Home</a>
+                <a href="/">Home</a>
                 <a href="courses.html">Courses</a>
                 <a href="programs.html">Programs</a>
                 <a href="teachers.html">Teachers</a>
@@ -28,12 +29,12 @@
         </div> 
     </header>
     <!---------Location-------->
-    <section class="location">
+    <section class="location" id="location">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7960.326450961045!2d39.7061083166285!3d-3.98682306307652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18400d6e44e7fdcd%3A0xa3aa0350fb5f2fef!2sGraced%20Apartment!5e0!3m2!1sen!2ske!4v1697627100637!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <!------------Contact------------>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="contact-row">
             <div class="contact-col">
                 <div>
@@ -77,7 +78,7 @@
  
 
      <!----------------Footer---------------->
-     <section class="footer">
+     <section class="footer" id="footer">
         <div class="footer-row">
             <div class="footer-col">
                 <h1>OneEdu</h1>
@@ -87,22 +88,22 @@
             <div class="footer-col">
                 <h3>Menu</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">Programs</a></li>
-                    <li><a href="#">Teachers</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="courses.html">Courses</a></li>
+                    <li><a href="programs.html">Programs</a></li>
+                    <li><a href="teachers.html">Teachers</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>   
             </div>
             <div class="footer-col">
                 <h3>Useful Links</h3>
                 <ul>
-                    <li><a href="#">Testimonials
+                    <li><a href="#testimonials">Testimonials
                     </a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Community</a></li>
-                    <li><a href="#">Campus Pictures</a></li>
-                    <li><a href="#">Tuitions</a></li>
+                    <li><a href="#fqa">FAQ</a></li>
+                    <li><a href="#community">Community</a></li>
+                    <li><a href="#cumpus">Campus Pictures</a></li>
+                    <li><a href="#tuition">Tuitions</a></li>
                 </ul>
             </div>
             <div class="footer-col">
@@ -115,20 +116,29 @@
         <hr>
         <div class="copyright-socialM">
             <div class="copyright">
-                <p> Copyright ©2023 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <a href="#">Kevin Ngari.</a></p>
+                <p> Copyright &copy;<span id="current-year"></span>All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by <a href="#">Kevin Ngari.</a></p>
             </div>
             <div class="media-icons">
-                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.github.com" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.facebook.com" target="_blank"aria-label="Follow us on Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.linkedin.com" target="_blank" aria-label="Follow us on Linkedin"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.twitter.com" target="_blank" aria-label="Follow us on Twitter"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.github.com" target="_blank" aria-label="Follow us on Github"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
 
      </section>
 
      <script src="script.js"></script>
-
-    
 </body>
+<script defer>
+    document.addEventListener("DOMContentLoaded", function() {
+        const currentYearEl = document.getElementById("current-year");
+
+        function showCurrentYear() {
+            currentYearEl.textContent = new Date().getFullYear();
+        }
+
+        showCurrentYear();
+    });
+</script>
 </html>
